Updated login html
now it loads the JS

--- a/src/Login.html
+++ b/src/Login.html
@@ -13,7 +13,10 @@
 
 	<!-- Fonts  -->
 	 <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
-	  
+		
+	 <!-- Scripts -->
+	 <script src="http://cop4331-2.com/scripts/md5.js"></script>
+	 <script src="http://cop4331-2.com/scripts/login.js"></script>
   </head>
 	
 	
