--- a/src/Login.html
+++ b/src/Login.html
@@ -8,8 +8,8 @@
 	  
     <!-- Bootstrap -->
 	<link href="css/bootstrap.css" rel="stylesheet">
-	<link href="main.css" rel="stylesheet" type="text/css">
-	<link href="navbar.css" rel="stylesheet" type="text/css">
+	<link href="css/main.css" rel="stylesheet" type="text/css">
+	<link href="css/navbar.css" rel="stylesheet" type="text/css">
 
 	<!-- Fonts  -->
 	 <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
