--- a/src/Login.html
+++ b/src/Login.html
@@ -6,12 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Queue & A - Login</title>
 	  
-    <!-- Bootstrap -->
-	<link href="css/bootstrap.css" rel="stylesheet">
-	<link href="css/main.css" rel="stylesheet" type="text/css">
-	<link href="css/navbar.css" rel="stylesheet" type="text/css">
+    <!-- Bootstrap --><!-- BootStrap -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+		<link href="css/main.css" rel="stylesheet" type="text/css">
+		<link href="css/navbar.css" rel="stylesheet" type="text/css">
 
-	<!-- Fonts  -->
+		<!-- Fonts  -->
 	 <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
 		
 	 <!-- Scripts -->
