--- a/src/Login.html
+++ b/src/Login.html
@@ -40,7 +40,7 @@
 			<form>
 				<input type="email" name="email" placeholder="Email Address" required>
 				<input type="password" name="password" placeholder="Password" required>
-				<input type="button" value="Login" class="btn-custom">
+				<input type="button" value="Login" class="btn-custom" onclick="login()">
 			</form>
 			<div class="login-help">
 				<a href="#">Forgot your password?</a><br>
@@ -48,19 +48,5 @@
 			</div>
 		</div>
 	  </div>
-
-	
-	  
-	  
-	
-	
-	  
-	  
-	  
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-	<script src="js/jquery-1.11.3.min.js"></script>
-
-	<!-- Include all compiled plugins (below), or include individual files as needed --> 
-	<script src="js/bootstrap.js"></script>
   </body>
 </html>
