--- a/src/register.html
+++ b/src/register.html
@@ -6,13 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Queue & A - Register</title>
 	  
-    <!-- Bootstrap -->
-	<link href="css/bootstrap.css" rel="stylesheet">
+   <!-- BootStrap -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 	  
 	<!-- Stylesheets -->
-	<link href="main.css" rel="stylesheet" type="text/css">
-	<link href="navbar.css" rel="stylesheet" type="text/css">
-	  
+	<link href="css/main.css" rel="stylesheet" type="text/css">
+	<link href="css/navbar.css" rel="stylesheet" type="text/css">
 	<!-- Fonts  -->
 	 <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
 	  
