--- a/src/myClasses.html
+++ b/src/myClasses.html
@@ -38,7 +38,7 @@
 	  </nav>
 	
 	  <div class="titleBar">
-		  <img src="MyClasses.png" alt="blah" height="130%">
+		  <img src="images/MyClasses.png" alt="blah" height="130%">
 	  </div>
 	  
 	  <div class="class-list-container">
@@ -95,7 +95,7 @@
 	  <footer>
 	  	<button type="button" class="btn-newClass">
 			<span>Add a new class</span>
-			<span><img src="plus-button.png" alt="plus" style="height:20px"/></span>
+			<span><img src="images/plus-button.png" alt="plus" style="height:20px"/></span>
 		</button>
 	  </footer>
 	  
