--- a/src/register.html
+++ b/src/register.html
@@ -14,6 +14,10 @@
 	<link href="css/navbar.css" rel="stylesheet" type="text/css">
 	<!-- Fonts  -->
 	 <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
+
+	 <!-- Scripts -->
+	 <script src="http://cop4331-2.com/scripts/md5.js"></script>
+	 <script src="http://cop4331-2.com/scripts/register.js"></script>
 	  
   </head>
 	
