--- a/src/register.html
+++ b/src/register.html
@@ -50,7 +50,7 @@
 			</form>
 			
 			<div class="login-help">
-				<a href="#">Login with an existing account</a><br>
+				<a href="Login.html">Login with an existing account</a><br>
 			</div>
 
 			<p id="passwordCompareAndCreateResult"></p>
