--- a/src/Login.html
+++ b/src/Login.html
@@ -24,7 +24,7 @@
 	  <nav class = "navbar navbar-default">
 	  	<div class = "container-fluid">
 			<div class = "navbar-header">
-				<a class = "navbar-brand" href="#">Queue & A</a>
+				<a class = "navbar-brand" href="index.html">Queue & A</a>
 			</div>
 			
 			<ul class = "nav navbar-nav navbar-right">
