Fixed typo and added response to register

--- a/register.html
+++ b/register.html
@@ -37,10 +37,10 @@
 		</div>
 	  </nav>
 	
-	  
 	  <div class="login-screen">
 		<div class="cardRegister">
 			<h1 class="cardTitle">Register</h1>
+			<p name = "response"></p>
 			<form>
 				<input type="text" id="form-name" placeholder="Full Name" required>
 				<input type="email" id="form-email" placeholder="Email Address" required>
