--- a/register.html
+++ b/register.html
@@ -46,7 +46,7 @@
 				<input type="email" id="form-email" placeholder="Email Address" required>
 				<input type="password" id="form-password" placeholder="Password" required>
 				<input type="password" id="form-password-confirm" placeholder="Confirm Password" required>
-                                <input type="submit" id="form-submit" value="Register" class="btn-custom" onclick="addProfessor()" required>
+                <input type="button" id="form-submit" value="Register" class="btn-custom" onclick="addProfessor()" required>
 			</form>
 			
 			<div class="login-help">
