--- a/Login.html
+++ b/Login.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Queue & A - Login</title>
+	<meta charset="utf-8">
+   	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+   	<meta name="viewport" content="width=device-width, initial-scale=1">
+   	<title>Queue & A - Login</title>
 	  
-    <!-- Bootstrap --><!-- BootStrap -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-		<link href="css/main.css" rel="stylesheet" type="text/css">
-		<link href="css/navbar.css" rel="stylesheet" type="text/css">
+   	<!-- Bootstrap --><!-- BootStrap -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+	
+	<!-- Stylesheets  -->
+	<link href="css/main.css" rel="stylesheet" type="text/css">
+	<link href="css/navbar.css" rel="stylesheet" type="text/css">
 
-		<!-- Fonts  -->
+	 <!-- Fonts  -->
 	 <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
 		
 	 <!-- Scripts -->
@@ -21,18 +23,19 @@
 	
 	
   <body>
-	  <nav class = "navbar navbar-default">
-	  	<div class = "container-fluid">
-			<div class = "navbar-header">
-				<a class = "navbar-brand" href="index.html">Queue & A</a>
-			</div>
-			
-			<ul class = "nav navbar-nav navbar-right">
-				<li><a href="Login.html">Login</a></li>
-				<li><a href="register.html">Register</a></li>
-			</ul>
-		</div>
-	  </nav>
+	 <!-- NAVBAR  -->
+	 <nav class="navbar navbar-expand-sm navbar-default">
+		<img src="../images/banner.png" width="275px" height="auto" alt="">
+		
+		<ul class="navbar-nav ml-auto">
+		    <li class="nav-item active">
+			<a class="nav-link" href="#">Login</a>
+		    </li>
+		    <li class="nav-item">
+			<a class="nav-link" href="#">Register</a>
+		    </li>
+		</ul>
+	 </nav>
 	  
 	  <div class="login-screen">
 		<div class="card">
@@ -50,11 +53,6 @@
 		</div>
 	  </div>
 
-	
-	  
-	  
-	
-	
 	  
 	  
   </body>
