--- a/register.html
+++ b/register.html
@@ -24,18 +24,19 @@
 	
   <body>
 	  
-	  <nav class = "navbar navbar-default">
-	  	<div class = "container-fluid">
-			<div class = "navbar-header">
-				<a class = "navbar-brand" href="index.html">Queue & A</a>
-			</div>
-			
-			<ul class = "nav navbar-nav navbar-right">
-				<li><a href="Login.html">Login</a></li>
-				<li><a href="register.html">Register</a></li>
-			</ul>
-		</div>
-	  </nav>
+	  <!-- NAVBAR  -->
+	 <nav class="navbar navbar-expand-sm navbar-default">
+		<img src="../images/banner.png" width="275px" height="auto" alt="">
+
+		<ul class="navbar-nav ml-auto">
+		    <li class="nav-item">
+			<a class="nav-link" href="#">Login</a>
+		    </li>
+		    <li class="nav-item active">
+			<a class="nav-link" href="#">Register</a>
+		    </li>
+		</ul>
+	 </nav>
 	
 	  <div class="login-screen">
 		<div class="cardRegister">
