--- a/myClasses.html
+++ b/myClasses.html
@@ -24,18 +24,22 @@
   <body>
 	  
 	  
-	  <nav class = "navbar navbar-default">
-	  	<div class = "container-fluid">
-			<div class = "navbar-header">
-				<a class = "navbar-brand" href="#">Queue & A</a>
-			</div>
-			
-			<ul class = "nav navbar-nav navbar-right">
-				<li><a href="#">My Classes</a></li>
-				<li><a href="Login.html">Sign out</a></li>
-			</ul>
-		</div>
-	  </nav>
+	  <!-- NAVBAR  -->
+	 <nav class="navbar navbar-expand-sm navbar-default">
+		<img src="images/banner.png" width="275px" height="auto" alt="">
+		
+		<ul class="navbar-nav ml-auto">
+		    <li class="nav-item active">
+			<a class="nav-link" href="#">My Classes</a>
+		    </li>
+		    <li class="nav-item">
+			<a class="nav-link" href="#">My Account</a>
+		    </li>
+				<li class="nav-item">
+			<a class="nav-link" href="#">Log Out</a>
+		    </li>
+		</ul>
+	 </nav>
 	
 	  <div class="titleBar">
 		  <img src="images/MyClasses.png" alt="blah" height="130%">
@@ -95,7 +99,6 @@
 	  <footer>
 	  	<button type="button" class="btn-newClass">
 			<span>Add a new class</span>
-			<span><img src="images/plus-button.png" alt="plus" style="height:20px"/></span>
 		</button>
 	  </footer>
 	  
