Basic JS for myClasses

--- a/myClasses.html
+++ b/myClasses.html
@@ -18,6 +18,9 @@
 	 <link href="https://fonts.googleapis.com/css?family=Barlow:400,500" rel="stylesheet">
 	 <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 	 
+	 <!-- Scripts -->
+	 <script src="http://cop4331-2.com/scripts/myClasses.js"></script>
+
   </head>
 	
 	
