Update links in navbar

--- a/Login.html
+++ b/Login.html
@@ -29,10 +29,10 @@
 		
 		<ul class="navbar-nav ml-auto">
 		    <li class="nav-item active">
-			<a class="nav-link" href="#">Login</a>
+			<a class="nav-link" href="Login.html">Login</a>
 		    </li>
 		    <li class="nav-item">
-			<a class="nav-link" href="#">Register</a>
+			<a class="nav-link" href="register.html">Register</a>
 		    </li>
 		</ul>
 	 </nav>
