--- a/register.html
+++ b/register.html
@@ -30,7 +30,7 @@
 
 		<ul class="navbar-nav ml-auto">
 		    <li class="nav-item">
-			<a class="nav-link" href="#">Login</a>
+			<a class="nav-link" href="Login.html">Login</a>
 		    </li>
 		    <li class="nav-item active">
 			<a class="nav-link" href="#">Register</a>
