--- a/myClasses.html
+++ b/myClasses.html
@@ -57,9 +57,36 @@
 	  </div>
 	  
 	  <footer>
-	  	<button type="button" class="btn-newClass">
+	  	<button type="button" class="btn-newClass" data-toggle="modal" data-target="#newClassModal">
 			<span>Add a new class</span>
 		</button>
 	  </footer>
+	  
+		<!-- New class modal -->
+		<div class="modal fade" id="newClassModal" tabindex="-1" role="dialog">
+			<div class="modal-dialog modal-dialog-centered" role="document">
+				<div class="modal-content">
+
+					<div class="modal-header">
+						<h5 class="modal-title">Create a new class</h5>
+						<button type="button" class="close" data-dismiss="modal">
+						  <span>&times;</span>
+						</button>
+					</div>
+
+					<div class="modal-body">
+						<div class="add-class-form-container">
+							<input type="text" placeholder="Class Name">
+						</div>
+					</div>
+
+					<div class="modal-footer">
+						<button type="button" class="btn btn-modal-black" data-dismiss="modal">Cancel</button>
+						<button type="button" class="btn btn-modal-green">Create</button>
+					</div>
+
+				</div>
+			</div>
+		</div>
   </body>
 </html>
