--- a/myClasses.html
+++ b/myClasses.html
@@ -39,7 +39,7 @@
 			<a class="nav-link" href="#">My Account</a>
 		    </li>
 				<li class="nav-item">
-			<a class="nav-link" href="#">Log Out</a>
+			<a class="nav-link" href="#" onclick="logout()">Log Out</a>
 		    </li>
 		</ul>
 	 </nav>
