Added modals.css to imports

--- a/myClasses.html
+++ b/myClasses.html
@@ -13,6 +13,7 @@
 	<link href="css/main.css" rel="stylesheet" type="text/css">
 	<link href="css/navbar.css" rel="stylesheet" type="text/css">
 	<link href="css/classes.css" rel="stylesheet" type="text/css">
+	<link href="css/modals.css" rel="stylesheet" type="text/css">
 	  
 	<!-- Fonts  -->
 	 <link href="https://fonts.googleapis.com/css?family=Barlow:400,500" rel="stylesheet">
