--- a/myClasses.html
+++ b/myClasses.html
@@ -77,13 +77,13 @@
 
 					<div class="modal-body">
 						<div class="add-class-form-container">
-							<input type="text" placeholder="Class Name">
+							<input id="add-class-input" type="text" placeholder="Class Name">
 						</div>
 					</div>
 
 					<div class="modal-footer">
 						<button type="button" class="btn btn-modal-black" data-dismiss="modal">Cancel</button>
-						<button type="button" class="btn btn-modal-green">Create</button>
+						<button type="button" class="btn btn-modal-green" data-dismiss="modal" onclick="addClass()">Create</button>
 					</div>
 
 				</div>
