added delete class modal

--- a/myClasses.html
+++ b/myClasses.html
@@ -90,6 +90,33 @@
 			</div>
 		</div>
 	  
+		  <!-- Delete class modal -->
+		<div class="modal fade" id="deleteClassModal" tabindex="-1" role="dialog">
+			<div class="modal-dialog modal-dialog-centered" role="document">
+				<div class="modal-content">
+
+					<div class="modal-header">
+						<h5 class="modal-title">Are you sure?</h5>
+						<button type="button" class="close" data-dismiss="modal">
+						  <span>&times;</span>
+						</button>
+					</div>
+
+					<div class="modal-body">
+						<div class="edit-class-form-container">
+							Are you sure you want to delete "Class name"? You won't ever be able to access it again.
+						</div>
+					</div>
+
+					<div class="modal-footer">
+						<button type="button" class="btn btn-modal-black" data-dismiss="modal">No</button>
+						<button type="button" class="btn btn-modal-green">Yes</button>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	  
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 	<script src="js/jquery-1.11.3.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
