--- a/Class.html
+++ b/Class.html
@@ -47,15 +47,13 @@
 	
 	  <div class="class-title-bar">
 		  <div class = "left-title-container">
-			  <!-- MyClasses image -->
-			  <img src="images/MyClasses.png" alt="blah">
-			  <!-- Class title -->
-			  <p>Super long class title that doesn't fit</p>
+			  <p class= "class-title">Class Title</p>
+			  <p class="class-id">Class ID: 12345</p>
 		  </div>
 		  
 		  <div class = "title-bar-buttons-container">
 			<div class = "home-container">
-				<button type="button" class="btn-home"></button>  
+				<button type="button" class="btn-home" href="myClasses.html"></button>  
 			</div>
 			<button type="button" class="btn-utility" href="#">Students</button>
 			<button type="button" class="btn-utility" data-toggle="modal" data-target="#editClassModal">Edit Class</button>
