Delete class functionality

--- a/myClasses.html
+++ b/myClasses.html
@@ -97,7 +97,7 @@
 
 					<div class="modal-header">
 						<h5 class="modal-title">Are you sure?</h5>
-						<button type="button" class="close" data-dismiss="modal">
+						<button type="button" class="close" data-dismiss="modal" onclick="setDeleteTarget(-1)">
 						  <span>&times;</span>
 						</button>
 					</div>
@@ -109,8 +109,8 @@
 					</div>
 
 					<div class="modal-footer">
-						<button type="button" class="btn btn-modal-black" data-dismiss="modal">No</button>
-						<button type="button" class="btn btn-modal-green">Yes</button>
+						<button type="button" class="btn btn-modal-black" data-dismiss="modal" onclick="setDeleteTarget(-1)">No</button>
+						<button type="button" class="btn btn-modal-green" data-dismiss="modal" onclick="deleteClass()">Yes</button>
 					</div>
 
 				</div>
