--- a/students.html
+++ b/students.html
@@ -17,6 +17,8 @@
 	<link href="css/modals.css" rel="stylesheet" type="text/css">
 	<link href="css/students.css" rel="stylesheet" type="text/css">
 	
+	<!-- Scripts -->
+	<script src="http://cop4331-2.com/scripts/students.js"></script>
 	  
 	<!-- Fonts  -->
 	 <link href="https://fonts.googleapis.com/css?family=Barlow:400,500" rel="stylesheet">
@@ -25,7 +27,7 @@
   </head>
 	
 	
-  <body>
+  <body onload="refreshPage()">
 	  
 	  
 	 <!-- NAVBAR  -->
