--- a/Class.html
+++ b/Class.html
@@ -127,7 +127,7 @@
 					
 				<div class="modal-footer">
 					<button type="button" class="btn btn-modal-black" data-dismiss="modal">Cancel</button>
-					<button type="button" class="btn btn-modal-green" data-dismiess="modal" onclick="addSession()">Create</button>
+					<button type="button" class="btn btn-modal-green" data-dismiss="modal" onclick="createNewSession()">Create</button>
 				</div>
 					
 			</div>
