--- a/Class.html
+++ b/Class.html
@@ -57,7 +57,7 @@
 		  
 		  <div class = "title-bar-buttons-container">
 			<div class = "home-container">
-				<a href="myClasses.html"><button type="button" class="btn-home"></button></a>  
+				<a href="myClasses.html" class="btn-home btn"></a>  
 			</div>
 			<button type="button" class="btn-utility" href="#">Students</button>
 			<button type="button" class="btn-utility" data-toggle="modal" data-target="#editClassModal">Edit Class</button>
