--- a/students.html
+++ b/students.html
@@ -51,17 +51,15 @@
 	
 	  <div class="class-title-bar">
 		  <div class = "left-title-container">
-			  <!-- MyClasses image -->
-			  <img src="images/MyClasses.png" alt="blah">
-			  <!-- Class title -->
-			  <p>Super long class title that doesn't fit</p>
+			  <p class="class-title"></p>
+			  <p class="class-id"></p>
 		  </div>
 		  
 		  <div class = "title-bar-buttons-container">
 			<div class = "home-container">
-				<button type="button" class="btn-home"></button>  
+				<a href="myClasses.html" class="btn-home btn"></a>  
 			</div>
-			<button type="button" class="btn-utility" data-toggle="modal" data-target="#studentsModal">Students</button>
+			<button type="button" class="btn-utility" href="#">Students</button>
 			<button type="button" class="btn-utility" data-toggle="modal" data-target="#editClassModal">Edit Class</button>
 		  </div>
 		  
