--- a/students.html
+++ b/students.html
@@ -59,8 +59,8 @@
 			<div class = "home-container">
 				<a href="myClasses.html" class="btn-home btn"></a>  
 			</div>
-			<button type="button" class="btn-utility" href="#">Students</button>
-			<button type="button" class="btn-utility" data-toggle="modal" data-target="#editClassModal">Edit Class</button>
+			<button type="button" class="btn-utility" onclick="location.href='http://cop4331-2.com/students.html'">Students</button>
+			<button type="button" class="btn-utility" onclick="location.href='http://cop4331-2.com/Class.html'">Class Page</button>
 		  </div>
 		  
 	  </div>
