--- a/students.html
+++ b/students.html
@@ -65,6 +65,7 @@
 		  
 	  </div>
 	 
+	<button class="btn-back" href="#">Back to session list</button>
 	  
 	<div class="student-list-container">
 		<h1>Current Students</h1>
