--- a/students.html
+++ b/students.html
@@ -19,6 +19,7 @@
 	
 	<!-- Scripts -->
 	<script src="http://cop4331-2.com/scripts/students.js"></script>
+	<script src="http://cop4331-2.com/scripts/main.js"></script>
 	  
 	<!-- Fonts  -->
 	 <link href="https://fonts.googleapis.com/css?family=Barlow:400,500" rel="stylesheet">
