--- a/myClasses.html
+++ b/myClasses.html
@@ -21,6 +21,7 @@
 	 
 	 <!-- Scripts -->
 	 <script src="http://cop4331-2.com/scripts/myClasses.js"></script>
+	 <script src="http://cop4331-2.com/scripts/main.js"></script>
 
   </head>
 	
