updated title bar

--- a/Class.html
+++ b/Class.html
@@ -49,20 +49,13 @@
 	  
 	  
 	
-	  <div class="class-title-bar">
-		  <div class = "left-title-container">
-			  <p class="class-title"></p>
-			  <p class="class-id"></p>
-		  </div>
-		  
-		  <div class = "title-bar-buttons-container">
-			<div class = "home-container">
-				<a href="myClasses.html" class="btn-home btn"></a>  
-			</div>
-			<button type="button" class="btn-utility" onclick="location.href='http://cop4331-2.com/students.html'">Students</button>
-			<button type="button" class="btn-utility" data-toggle="modal" data-target="#editClassModal">Edit Class</button>
-		  </div>
-		  
+	 <div class="class-title-bar">
+		  <p class= "class-title">Class Title</p>
+		  <p class="class-id">Class ID: 12345</p>
+		  <div class= "btn-container">
+		  	<button type="button" class="btn-utility" href="#">Class Home</button>
+		    <button type="button" class="btn-utility">Student List</button>
+		  </div>  
 	  </div>
 	 
 	  
