update title bar + remove back button

--- a/session.html
+++ b/session.html
@@ -47,23 +47,13 @@
 	  
 	
 	  <div class="class-title-bar">
-		  <div class = "left-title-container">
-			  <!-- Class title -->
-			  <p class= "class-title">Class Title</p>
-			  <p class="class-id">Class ID: 12345</p>
-		  </div>
-		  
-		  <div class = "title-bar-buttons-container">
-			<div class = "home-container">
-				<button type="button" class="btn-home"></button>  
-			</div>
-			<button type="button" class="btn-utility" href="#">Students</button>
-			<button type="button" class="btn-utility" data-toggle="modal" data-target="#editClassModal">Edit Class</button>
-		  </div>
-		  
+		  <p class= "class-title">Class Title</p>
+		  <p class="class-id">Class ID: 12345</p>
+		  <div class= "btn-container">
+		  	<button type="button" class="btn-utility" href="#">Class Home</button>
+		    <button type="button" class="btn-utility">Student List</button>
+		  </div>  
 	  </div>
-	 
-	 <button class="btn-back" href="#">Back to session list</button>
 	  
 	 <div class="overhead-container">
 	
