--- a/Class.html
+++ b/Class.html
@@ -51,9 +51,9 @@
 	
 	 <div class="class-title-bar">
 		  <p class= "class-title">Class Title</p>
-		  <p class="class-id">Class ID: 12345</p>
+		  <p class="class-id">Class ID</p>
 		  <div class= "btn-container">
-		  	<button type="button" class="btn-utility" href="#">Class Home</button>
+		  	<button type="button" class="btn-utility" href="myClasses.html">Class Home</button>
 		    <button type="button" class="btn-utility">Student List</button>
 		  </div>  
 	  </div>
