--- a/Class.html
+++ b/Class.html
@@ -53,7 +53,7 @@
 		  <p class= "class-title">Class Title</p>
 		  <p class="class-id">Class ID</p>
 		  <div class= "btn-container">
-		  	<button type="button" class="btn-utility" href="myClasses.html">Class Home</button>
+		  	<a href="myClasses.html"><button type="button" class="btn-utility">Class Home</button></a>
 		    <button type="button" class="btn-utility">Student List</button>
 		  </div>  
 	  </div>
