Fixed button links

--- a/Class.html
+++ b/Class.html
@@ -53,8 +53,8 @@
 		  <p class= "class-title">Class Title</p>
 		  <p class="class-id">Class ID</p>
 		  <div class= "btn-container">
-		  	<a href="myClasses.html"><button type="button" class="btn-utility">Class Home</button></a>
-		    <button type="button" class="btn-utility">Student List</button>
+		  	<a href="Class.html"><button type="button" class="btn-utility">Class Home</button></a>
+			<a href="students.html"><button type="button" class="btn-utility">Student List</button></a>
 		  </div>  
 	  </div>
 	 
