--- a/session.html
+++ b/session.html
@@ -21,6 +21,10 @@
 	 <link href="https://fonts.googleapis.com/css?family=Barlow:400,500" rel="stylesheet">
 	 <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 	 
+	 <!-- Scripts -->
+	 <script src="http://cop4331-2.com/scripts/session.js"></script>
+	 <script src="http://cop4331-2.com/scripts/main.js"></script>
+
   </head>
 	
 	
@@ -42,18 +46,16 @@
                 <a class="nav-link" href="#">Log Out</a>
             </li>
         </ul>
-	 </nav>
+			</nav>
 	  
-	  
-	
-	  <div class="class-title-bar">
-		  <p class= "class-title">Class Title</p>
-		  <p class="class-id">Class ID: 12345</p>
-		  <div class= "btn-container">
-		  	<button type="button" class="btn-utility" href="#">Class Home</button>
-		    <button type="button" class="btn-utility">Student List</button>
-		  </div>  
-	  </div>
+	 <div class="class-title-bar">
+		<p class= "class-title">Class Title</p>
+		<p class="class-id">Class ID</p>
+		<div class= "btn-container">
+			<a href="Class.html"><button type="button" class="btn-utility">Class Home</button></a>
+		<a href="students.html"><button type="button" class="btn-utility">Student List</button></a>
+		</div>  
+	</div>
 	  
 	 <div class="overhead-container">
 	
