--- a/students.html
+++ b/students.html
@@ -47,17 +47,15 @@
             </li>
         </ul>
 	 </nav>
-	  
-	  
-	
-	  <div class="class-title-bar">
-		  <p class= "class-title">Class Title</p>
-		  <p class="class-id">Class ID: 12345</p>
-		  <div class= "btn-container">
-		  	<button type="button" class="btn-utility" href="#">Class Home</button>
-		    <button type="button" class="btn-utility">Student List</button>
-		  </div>  
-	  </div>
+	 
+	 <div class="class-title-bar">
+		<p class= "class-title">Class Title</p>
+		<p class="class-id">Class ID</p>
+		<div class= "btn-container">
+			<a href="Class.html"><button type="button" class="btn-utility">Class Home</button></a>
+		  <a href="students.html"><button type="button" class="btn-utility">Student List</button></a>
+		</div>  
+	</div>
 	  
 	<div class="student-list-container">
 		<h1>Current Students</h1>
