--- a/session.html
+++ b/session.html
@@ -156,7 +156,7 @@
 
 					<div class="modal-footer">
 						<button type="button" class="btn btn-modal-black" data-dismiss="modal">No</button>
-						<button type="button" class="btn btn-modal-green">Yes</button>
+						<button type="button" class="btn btn-modal-green" data-dismiss="modal">Yes</button>
 					</div>
 
 				</div>
@@ -175,7 +175,7 @@
 						</button>
 					</div>
 
-					<div class="modal-body">
+					<div class="modal-body" id="askerName">
 						Student who submitted this question: <br>
 						"student name"
 					</div>
