Update default values

--- a/Class.html
+++ b/Class.html
@@ -50,8 +50,8 @@
 	  
 	
 	 <div class="class-title-bar">
-		  <p class= "class-title">Class Title</p>
-		  <p class="class-id">Class ID</p>
+		  <p class= "class-title"></p>
+		  <p class="class-id"></p>
 		  <div class= "btn-container">
 		  	<a href="Class.html"><button type="button" class="btn-utility">Class Home</button></a>
 			<a href="students.html"><button type="button" class="btn-utility">Student List</button></a>
