--- a/students.html
+++ b/students.html
@@ -37,10 +37,7 @@
 		
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">My Classes</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">My Account</a>
+                <a class="nav-link" href="classes.html">My Classes</a>
             </li>
 			<li class="nav-item">
                 <a class="nav-link" href="#" onclick="logout()">Log Out</a>
