--- a/session.html
+++ b/session.html
@@ -37,7 +37,7 @@
 		
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="classes.html">My Classes</a>
+                <a class="nav-link" href="Class.html">My Classes</a>
             </li>
 			<li class="nav-item">
                 <a class="nav-link" href="#">Log Out</a>
