--- a/Class.html
+++ b/Class.html
@@ -36,7 +36,7 @@
 		
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="classes.html">My Classes</a>
+                <a class="nav-link" href="myClasses.html">My Classes</a>
             </li>
 			<li class="nav-item">
                 <a class="nav-link" href="#" onclick="logout()">Log Out</a>
