--- a/session.html
+++ b/session.html
@@ -33,14 +33,14 @@
 	  
 	 <!-- NAVBAR  -->
 	 <nav class="navbar navbar-expand-sm navbar-default">
-		<img src="banner.png" width="275px" height="auto" alt="">
+		<img src="images/banner.png" width="275px" height="auto" alt="">
 		
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="Class.html">My Classes</a>
+                <a class="nav-link" href="myClasses.html">My Classes</a>
             </li>
 			<li class="nav-item">
-                <a class="nav-link" href="#">Log Out</a>
+                <a class="nav-link" href="#" onclick="logout()">Log Out</a>
             </li>
         </ul>
 			</nav>
