removed highlight from My Classes button

--- a/students.html
+++ b/students.html
@@ -36,7 +36,7 @@
 		<img src="images/banner.png" width="275px" height="auto" alt="">
 		
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="myClasses.html">My Classes</a>
             </li>
 			<li class="nav-item">
