--- a/myClasses.html
+++ b/myClasses.html
@@ -115,6 +115,31 @@
 			</div>
 		</div>
 	  
+	  	<!-- Error modal -->
+		<div class="modal fade" id="errorModal" tabindex="-1" role="dialog">
+			<div class="modal-dialog modal-dialog-centered" role="document">
+				<div class="modal-content">
+
+					<div class="modal-header">
+						<h5 class="modal-title">Error</h5>
+						<button type="button" class="close" data-dismiss="modal">
+						  <span>&times;</span>
+						</button>
+					</div>
+
+					<div class="modal-body">
+						<div class="edit-session-form-container">
+							Error message here
+						</div>
+					</div>
+
+					<div class="modal-footer">
+						<button type="button" class="btn btn-modal-black" data-dismiss="modal">Close</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	  
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
