Forward API errors to modal

--- a/Class.html
+++ b/Class.html
@@ -235,7 +235,7 @@
 				</div>
 					
 				<div class="modal-body">
-					<div class="edit-session-form-container">
+					<div class="edit-session-form-container" id="errorText">
 						Error message here
 					</div>
 				</div>
