--- a/students.html
+++ b/students.html
@@ -191,7 +191,7 @@
 				</div>
 					
 				<div class="modal-body">
-					<div class="edit-session-form-container">
+					<div class="edit-session-form-container" id="errorText">
 						Error message here
 					</div>
 				</div>
