--- a/myClasses.html
+++ b/myClasses.html
@@ -128,7 +128,7 @@
 					</div>
 
 					<div class="modal-body">
-						<div class="edit-session-form-container id="errorText"">
+						<div class="edit-session-form-container" id="errorText">
 							Error message here
 						</div>
 					</div>
