Make delete button do something

--- a/session.html
+++ b/session.html
@@ -150,7 +150,7 @@
 
 					<div class="modal-footer">
 						<button type="button" class="btn btn-modal-black" data-dismiss="modal">No</button>
-						<button type="button" class="btn btn-modal-green" data-dismiss="modal">Yes</button>
+						<button type="button" class="btn btn-modal-green" data-dismiss="modal" onclick="deleteQuestion()">Yes</button>
 					</div>
 
 				</div>
